<resources>
    <string name="app_name">@string/app_title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">KWESI JAMES $HOPPING</string>
    <string name="enter_username">Enter username (email address)</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Log In</string>
    <string name="forgot_pw">Forgot Password</string>
    <string name="register">No Account? Register here!</string>
    <string name="register_new">Register</string>
    <string name="register_text">New User Registration</string>
    <string name="enter_name">Enter full name</string>
    <string name="enter_address">Enter Billing &amp; Shipping address</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clear">Clear</string>
    <string name="button_register">Register!</string>
    <string name="enter_hobbies">Enter hobbies</string>
    <string name="reset_pw">Reset Password</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="register_username_empty">Your username (email) cannot be empty!</string>
    <string name="register_fullname_empty">Your full name cannot be empty!</string>
    <string name="register_password_empty">Please enter a password!</string>
    <string name="register_password2_empty">Please confirm your password!</string>
    <string name="register_password_no_match">Your passwords must match!</string>
    <string name="register_password_req_wrong">Your password is not strong enough! It should contain at least 8 characters, an uppercase character, a lowercase character, as well as a number.</string>
    <string name="register_address_empty">Please enter your address!</string>
    <string name="unknown_error">An unknown error has occurred. Please report this bug!</string>
    <string name="register_password_min_chars">You need at least 8 characters in your password!</string>
    <string name="register_password_uppercase">You need at least 1 uppercase character in your password!</string>
    <string name="register_password_lowercase">You need at least 1 lowercase character in your password!</string>
    <string name="register_password_no_number">You need at least 1 number in your password!</string>
    <string name="register_user_exists">Username (email) already registered!</string>
    <string name="register_user_success">User successfully registered!</string>
    <string name="forgot_pw_no_user">User not found! Have you entered your username correctly?</string>
    <string name="forgot_pw_wrong_details">Incorrect details provided. Please try again!</string>
    <string name="forgot_pw_success">Password reset successfully.</string>
    <string name="basket_title">Your Basket</string>
    <string name="password_wrong">Incorrect password.</string>
    <string name="logout_message">Are you sure you want to log out?</string>
    <string name="logout">Log Out</string>
    <string name="logout_no_user">You aren\'t logged in!</string>
    <string name="category_select">Browsing all categories</string>
    <string name="browse">Browse Categories</string>
    <string name="browse_products">Browse Products</string>
    <string name="addToBasket">Add To Basket</string>
    <string name="quantity">Quantity</string>
    <string name="cat_back">Back to Category Product List</string>
    <string name="admin_edit_product">[ADMIN] Edit Product</string>
    <string name="out_of_stock">Out of stock! Check back soon!</string>
    <string name="view_product">View Product</string>
    <string name="total_price">Total Price:</string>
    <string name="shipping_std">Standard</string>
    <string name="shipping_exp">Express</string>
    <string name="shipping_nxt">Next Day</string>
    <string name="shipping_sel">Select Shipping Method:</string>
    <string name="place_order">Place Order</string>
    <string name="back_to_browse">Back to Browse</string>
    <string name="basket_remove">Remove from Basket</string>
    <string name="basket_remove_desc">Are you sure you want to remove this item from your basket?</string>
    <string name="basket_empty">Your basket is empty!</string>
    <string name="user_profile">Your Profile</string>
    <string name="user_orders">Your Orders</string>
    <string name="no_orders">You haven\'t made an order yet!</string>
    <string name="order_created">Order created on:</string>
    <string name="order_delivery_method">Delivery method:</string>
    <string name="order_delivery_latest">Due to be delivered by:</string>
    <string name="order_status_created">Created</string>
    <string name="order_status_packing">Packing</string>
    <string name="order_status_pre_dispatch">Awaiting Dispatch</string>
    <string name="order_status_dispatch">Dispatched</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="order_status_start_return">Return In Progress</string>
    <string name="order_status_returned">Returned</string>
    <string name="order_status_cancelled">Cancelled</string>
    <string name="order_status_error">Error!</string>
    <string name="menu_bug_report">Report a Bug</string>
    <string name="menu_support">Get Help</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_exit">Exit App</string>
    <string name="menu_view">View Product Page</string>
    <string name="menu_add_to_basket">Add to Basket</string>
    <string name="menu_view_order">View Order Contents</string>
    <string name="menu_cancel_order">Cancel Order</string>
    <string name="menu_return">Start a Return</string>
    <string name="return_title">Return an Order</string>
    <string name="menu_remove_order">Remove Order</string>
    <string name="remove_order_desc">This will <b>permanently</b> remove this order from your order history!\n\nAre you sure you want to do this? (this action is irreversible)</string>
    <string name="remove_order_confirm">Confirm &amp; Remove</string>
    <string name="return_desc">We at Kwesi James $hopping take great pride in our products and deeply apologise that you are not fully satisfied with your order.\nAre you sure you want to start a return?\nWe will send you a pre–paid shipping label via email, and will get in touch with you upon receipt to get more information. Any refund will take 3–5 business days to reach your preferred payment method.</string>
    <string name="cancel_title">Cancel an Order</string>
    <string name="cancel_desc">We are very sorry to hear you wish to cancel your order. This is irreversible, and a refund will reach your preferred payment method within 3–5 business days.\nAre you sure you want to cancel your order?</string>
    <string name="return_confirm">Confirm &amp; Return</string>
    <string name="cancel_confirm">Confirm &amp; Cancel</string>
    <string name="back_orders">Back to Your Orders</string>
    <string name="user_orders_contents">Order Contents</string>
    <string name="category_change_name">New category name</string>
    <string name="category_edit_name">Change Name</string>
    <string name="category_edit_migrate">Migrate Products</string>
    <string name="category_edit_delete">Delete Category</string>
    <string name="category_edit_new">Create new Category</string>
    <string name="category_change_name_success">Category name successfully updated.</string>
    <string name="category_change_name_error">Error while updating category name. Please try again later.</string>
    <string name="category_migrate_success">Successfully migrated all products in category to new category.</string>
    <string name="category_migrate_error">Error while migrating all products in category. Please try again later.</string>
    <string name="category_view">View Category</string>
    <string name="category_delete_products">This category still has products assigned to it! Please migrate these products to a new category or delete them first!</string>
    <string name="category_delete_title">Delete Category</string>
    <string name="category_delete_desc">This will <b>permanently</b> delete this category!\n\nAre you sure you want to do this?</string>
    <string name="category_delete_confirm">Delete Anyway</string>
    <string name="category_delete_success">Category successfully deleted.</string>
    <string name="category_delete_error">Error while deleting Category. Please try again later.</string>
    <string name="category_create_success">New category successfully created.</string>
    <string name="category_create_error">Error while creating new category. Please try again later.</string>
    <string name="category_create_name_empty">New category name cannot be empty!</string>
    <string name="basket_order_success">Order successfully placed!</string>
    <string name="admin_product_change_name">Change product name</string>
    <string name="admin_product_change_stock">Change product stock</string>
    <string name="admin_product_change_desc">Change product description</string>
    <string name="admin_product_change_category">Change product category</string>
    <string name="admin_product_change_price">Change product price</string>
    <string name="product_name">Product Name</string>
    <string name="product_desc">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="product_list_price">Product List Price</string>
    <string name="product_retail_price">Product Retail Price</string>
    <string name="product_stock">Product Stock</string>
    <string name="product_category">Product Category</string>
    <string name="product_update_success">Product successfully updated.</string>
    <string name="product_update_error">Error while updating product details. Please try again later.</string>
    <string name="product_update_info_empty">Updated field cannot be empty!</string>
    <string name="product_create">Create new product</string>
    <string name="product_create_success">New product successfully created.</string>
    <string name="product_create_error">Could not create new product due to unknown error. Please try again later!</string>
    <string name="product_create_fields_empty">Please make sure all fields are filled in when creating a new product!</string>
    <string name="product_delete">Delete Product</string>
    <string name="product_delete_desc">This will <b>permanently</b> delete this product!\n\nAre you sure you want to do this?</string>
    <string name="product_delete_assigned">This product has active orders assigned to it! Please delete these orders before deleting this product!</string>
    <string name="product_delete_success">Product successfully deleted.</string>
    <string name="product_delete_error">Error while deleting product. Please try again later.</string>
    <string name="migrate">Migrate</string>
    <string name="bug_report_title">Bug Report Category</string>
    <string name="bug_report_detail">Bug Report Details</string>
    <string name="submit">Submit Report</string>
    <string name="bug_report_info">Please submit details of your bug report below. A staff member will be in contact within 7 working days with an update.</string>
    <string name="bug_report_success">Bug report successfully submitted. Thank you!</string>
    <string name="bug_report_error">Error while submitting bug report. Please try again later!</string>
    <string name="bug_report_empty">Bug report title and description cannot be empty! Please fill these fields in.</string>
    <string name="support_description">Please contact <b>support@kwesijames.shop</b> for any support queries.\n\nPlease ensure the email is sent from the same email address as your registered account so that we can ensure speedy help.</string>
    <string name="ok">Ok</string>
</resources>