<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">

    <LinearLayout
        android:id="@+id/registerFragmentLayout"
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/global_margin">

        <TextView
            android:id="@+id/registerTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_margin="@dimen/title_margin"
            android:textSize="@dimen/text_title"/>
        <TextView
            android:id="@+id/registerHeadingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="@dimen/text_heading"/>

        <EditText
            android:id="@+id/registerUsernameEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:layout_margin="@dimen/button_margin"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/registerFullNameEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:layout_margin="@dimen/button_margin"
            android:inputType="text"/>

        <EditText
            android:id="@+id/registerPasswordEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:layout_margin="@dimen/button_margin"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/registerPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:layout_margin="@dimen/button_margin"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/registerAddressEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:layout_margin="@dimen/button_margin"
            android:inputType="textPostalAddress"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_margin="@dimen/global_margin">

        <Button
            android:id="@+id/registerUserButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button_register"/>

        <Button
            android:id="@+id/registerClearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button_clear"/>

        <Button
            android:id="@+id/registerCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/button_cancel"/>
    </LinearLayout>
</FrameLayout>