<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ForgotPasswordFragment">

    <LinearLayout
        android:id="@+id/forgotLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/global_margin">

        <TextView
            android:id="@+id/forgotTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_margin="@dimen/title_margin"
            android:textSize="@dimen/text_title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotUsernameEnter"
            android:hint="@string/enter_username"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotNameEnter"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotAddressEnter"
            android:hint="@string/enter_address"
            android:inputType="textPostalAddress"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotNewPasswordEnter"
            android:hint="@string/enter_password"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotConfirmPasswordEnter"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/button_margin"
            android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgotButtonLayout"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin">

        <Button
            android:id="@+id/forgotResetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_pw"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/forgotClearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear"
            android:layout_margin="@dimen/button_margin"/>

        <Button
            android:id="@+id/forgotCancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:layout_margin="@dimen/button_margin"/>
    </LinearLayout>
</FrameLayout>