<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bugReportInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/bug_report_info"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bugReportTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bug_report_title"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bugReportDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bug_report_detail"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>