<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productChangePriceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productChangeListPriceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_list_price"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/productChangeRetailPriceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_retail_price"
            android:inputType="numberDecimal"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>